email field issue in dark mode fixed

--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -115,6 +115,11 @@
     position: relative;
 	  height: 45px;
 }
+.input1 {
+  background-color: black;
+  border: transparent;
+
+}
 
 .input-div > div > h5{
 	position: absolute;
